give story button gradient and fix parkowl, mvevm img sizes and alignments

--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,35 @@
 .parallax-skinny {
   height: 50px;
 }
+
+.clickable {
+  border-top: 1px solid #96d1f8;
+  background: #004d40;
+  background: -webkit-gradient(linear, left top, left bottom, from(#00897b), to(#004d40));
+  background: -webkit-linear-gradient(top, #00897b, #004d40);
+  background: -moz-linear-gradient(top, #00897b, #004d40);
+  background: -ms-linear-gradient(top, #00897b, #004d40);
+  background: -o-linear-gradient(top, #00897b, #004d40);
+  padding: 20px 40px;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
+  -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  box-shadow: rgba(0,0,0,1) 0 1px 0;
+  text-shadow: rgba(0,0,0,.4) 0 1px 0;
+  color: white;
+  font-size: 24px;
+  font-family: Georgia, serif;
+  text-decoration: none;
+  vertical-align: middle;
+}
+.clickable:hover {
+  border-top-color: #28597a;
+  background: #28597a;
+  color: #ccc;
+}
+.clickable:active {
+  border-top-color: #1b435e;
+  background: #1b435e;
+}
